# smarttel

./: CLAUDE.md  NOTES.org  README.md  main.py  pyproject.toml
cli/: __init__.py  ui.py  ui.tcss
smarttel/seestar/: client.py  connection.py
smarttel/seestar/commands/: __init__.py  common.py  discovery.py  imaging.py  parameterized.py  settings.py  simple.py
smarttel/seestar/events/: __init__.py
smarttel/seestar/plans/: __init__.py
smarttel/util/: __init__.py  asyncutil.py
