[project]
name = "smarttel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "fastapi>=0.115.12",
    "netifaces>=0.11.0",
    "pydantic>=2.11.4",
    "textual-dev>=1.7.0",
    "textual[syntax]>=3.2.0",
    "uvicorn>=0.34.3",
]
